[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trobin"
version = "0.3.1"
authors = [
  { name="trobin", email="trobin@student.42.fr" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
